# sharepoint-manager

./: LICENSE  README.es.md  README.md  README_temp.md  pyproject.toml
src/sharepoint_manager/sharepoint_class_management/: __init__.py  sharepoint_management.py
src/sharepoint_manager/sharepoint_functions/: functions.py  sharepoint_functions.py
