[project]
name = "sharepoint_manager"
version = "0.1.0"
description = "Library to manage SharePoint resources through class-based and functional interfaces."
authors = [
    {name = "Centro de Monitoreo ANLA", email = "centromonitoreo@anla.gov.co"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "requests",
    "office365-rest-python-client"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}